# coronet

./: .clang-format  .clangd  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  NOTICE  README.md
bench/: CMakeLists.txt  cmp_bench.sh  generator_benchmark.cpp  plot_results.py  redis_echo_MT.cpp  redis_echo_asio.cpp  redis_echo_asio_MT.cpp  redis_echo_coro.cpp  run_benchmark.ps1  run_benchmark.sh  run_full_benchmark.sh  task_benchmark.cpp
cmake/: CompileOption.cmake  Develop.cmake  Extra.cmake  Install.cmake  Option.cmake  Platform.cmake
cmake/templates/: Config.cmake.in
data/: final_comparison.csv
data/benchmark_results_20260626_161449/: coronet.csv
data/benchmark_results_20260629_114512/: asio.csv  coronet.csv
data/win_bench_20260626_222958/: results.csv
data/win_bench_20260626_223039/: results.csv
doc/: aio_PR.md  api_Manual.md  test_Report.md
examples/: CMakeLists.txt  channel.cpp  cv_notify_all.cpp  cv_notify_one.cpp  echo_server.cpp  echo_server_MT.cpp  echo_server_client.cpp  httpd.cpp  httpd_MT.cpp  iota.cpp  mutex.cpp  netcat.cpp  pingpong_client.cpp  sem.cpp  timer.cpp  timer_accuracy.cpp  when_all.cpp  when_any.cpp  when_some.cpp
include/coronet/: all.hpp  async_io.hpp  coronet.hpp  generator.hpp  io_context.hpp  net.hpp  shared_task.hpp  task.hpp
include/coronet/co/: channel.hpp  condition_variable.hpp  mutex.hpp  semaphore.hpp  when_all.hpp
include/coronet/config/: io_context.hpp  log.hpp  uring.hpp
include/coronet/detail/: chained_awaiter.hpp  io_context_meta.hpp  lock_guard.hpp  spinlock.hpp  spsc_cursor.hpp  task_info.hpp  tasklike.hpp  thread_meta.hpp  trivial_task.hpp  type_traits.hpp  uninitialized_buffer.hpp  user_data.hpp  worker_meta.hpp
include/coronet/log/: log.hpp
include/coronet/net/: acceptor.hpp  inet_address.hpp  socket.hpp
include/coronet/platform/: platform.hpp  proactor.hpp
include/coronet/platform/epoll/: epoll_lazy_io.hpp  epoll_reactor.hpp
include/coronet/platform/io_uring/: io_uring_lazy_io.hpp  io_uring_proactor.hpp
include/coronet/platform/iocp/: iocp_proactor.hpp  iocp_win_io.hpp
include/coronet/utility/: defer.hpp
lib/: CMakeLists.txt
lib/coronet/: CMakeLists.txt  io_context.cpp
lib/coronet/co/: condition_variable.cpp  mutex.cpp  semaphore.cpp
lib/coronet/detail/: io_context_meta.cpp  thread_meta.cpp  worker_meta.cpp
lib/coronet/net/: inet_address.cpp  socket.cpp
lib/coronet/platform/epoll/: epoll_reactor.cpp
lib/coronet/platform/io_uring/: io_uring_proactor.cpp
lib/coronet/platform/iocp/: iocp_proactor.cpp
script/linux/: aio_server_Benchmark.sh  aio_server_Plot.py  build.sh  chain_cmp.sh  cmp_bench.sh  debug_test.sh  fair_bench.sh  full_bench.sh  full_bench_clang.sh  mt_bench.sh  mt_compare.sh  mt_loop_verify.sh  perf_cmp.sh  plot_results.py  run_all.sh  scaling_test.sh  smoke_all.sh  smoke_test.sh  st_bench.sh  step_test.sh  test_all.sh  three_way_bench.sh  verify_bench.sh
script/win/: build.bat  build_msvc.bat  fair_bench.bat  fair_bench.ps1  perf_cmp.ps1  quick_bench.sh  run_all.ps1  scaling_test.ps1  smoke.ps1  smoke_test.ps1
src/coronet/: io_context.cpp
src/coronet/co/: condition_variable.cpp  mutex.cpp  semaphore.cpp
src/coronet/detail/: io_context_meta.cpp  thread_meta.cpp  worker_meta.cpp
src/coronet/net/: inet_address.cpp  socket.cpp
src/coronet/platform/epoll/: epoll_reactor.cpp
src/coronet/platform/io_uring/: io_uring_proactor.cpp
src/coronet/platform/iocp/: iocp_proactor.cpp
stress-test/: CMakeLists.txt  redis_echo_MT.cpp  redis_echo_ST.cpp  redis_echo_asio_ST.cpp  redis_echo_chain.cpp  redis_loadgen.cpp  start_servers.sh  stop_servers.sh  stress_driver.cpp  stress_test_Driver.cpp
test/: CMakeLists.txt  channel.cpp  channel_gtest.cpp  coro_lifetime.cpp  cv_notify_all.cpp  cv_notify_one.cpp  ft_task.cpp  generator_benchmark.cpp  generator_gtest.cpp  generator_test.cpp  move_shared_task.cpp  mutex.cpp  proactor_gtest.cpp  sem.cpp  shared_task_gtest.cpp  stress_test.cpp  task_gtest.cpp  timer.cpp  timer_accuracy.cpp  when_all.cpp  when_any.cpp  when_some.cpp
